navbar and palletes fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,18 @@
 :root {
-    --primary: #1f3e72;
-    --secondary: rgba(255, 255, 255, 0.78);
+    --primary: #203B8F;
+    --secondary: #F8FAFE;
     --black: #131110;
-    --blue-gradient: linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%);
+    --blue-gradient: linear-gradient(97.05deg, #9747F3 3.76%, #E52620 100%);
     --orange-gradient: linear-gradient(270deg, #ffb978 0%, #ff922d 100%);
-    --blue: #4066ff;
-    --lightBlue: #eeeeff;
+    --blue: #9747F3;
+    --lightBlue: #b1b4bb;  /* CINZAO */
     --shadow: 0px 23px 21px -8px rgba(136, 160, 255, 0.25);
   }
-  
+  /* Azul: #203B8F
+  Vermelho: #E52620
+  BRANCO: #F8FAFE
+
+   */
   * {
     margin: 0;
     padding: 0;
