--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .App>:nth-child(1) {
     background: var(--primary);
 }
-
+/*
 .white-gradient {
     position: absolute;
     width: 20rem;
@@ -14,4 +14,4 @@
     background: rgba(255, 255, 255, 0.522);
     filter: blur(100px);
     border-radius: 100px;
-}
+} */
